--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -1,6 +1,6 @@
 h1{
   text-align: center;
-  font-size: 50px;
+  font-size: 90px;
   font-family: fantasy;
 }
 
@@ -10,7 +10,7 @@ h2{
 
 h6{
   text-align: center;
-  font-size: 15px;
+  font-size: 18px;
   word-spacing: 60px;
 }
 
@@ -27,9 +27,20 @@ div.banner2{
 background: -webkit-linear-gradient(top, #a3d1ff 20%,#a3dff1 54%,#a3d1ff 83%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom, #a3d1ff 20%,#a3dff1 54%,#a3d1ff 83%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a3d1ff', endColorstr='#a3d1ff',GradientType=0 );
+  font-size: 32px;
 }
 
 div.images img {
-  height: 300px;
+  height: 400px;
   width: 600px;
+}
+
+div.images2 img {
+  height: 400px;
+  width: 600px;
+}
+
+p{
+  text-align: center;
+  font-size: 24px;
 }
