--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -15,7 +15,7 @@ h6{
 }
 
 body {
-  background-image: url("http://cdn.pcwallart.com/images/island-beach-wallpaper-2.jpg");
+  background-image: url("http://kingofwallpapers.com/paradise/paradise-010.jpg");
 }
 
 div.banner {
